# easyhash

./: README.md  package-lock.json  package.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/scripts/: crypto.js  hash.js  main.js
